--- a/index.html
+++ b/index.html
@@ -1,31 +1,28 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Serviços de Informática | Suporte Técnico e Soluções Digitais</title>
-    <meta name="description" content="Especialistas em serviços de informática: manutenção, formatação, remoção de vírus, backup de dados, redes e consultoria. Soluções completas para seu computador e rede.">
-    <meta name="keywords" content="serviços de informática, manutenção de PC, formatação, remoção de vírus, suporte técnico, assistência técnica, redes de computadores, backup de dados, soluções digitais, TI, Caldas Novas">
+    <title>Serviços de Informática | Suporte Técnico, Redes e Desenvolvimento</title>
+    <meta name="description" content="Assistência técnica em informática, manutenção de computadores, redes, formatação, sites e soluções digitais modernas para empresas e residências.">
+    <meta name="keywords" content="informática, manutenção de computadores, suporte técnico, redes, formatação, criação de sites, soluções digitais, TI, Caldas Novas">
     <meta name="robots" content="index, follow">
 
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
+
 <body>
 
+    <!-- HEADER -->
     <header class="header">
         <div class="container">
             <div class="logo">
-                <a href="#home">
-                    <img src="logo.png" alt="Logo Serviços de Informática">
-                </a>
+                <a href="#home"><img src="logo.png" alt="Logo Serviços de Informática"></a>
             </div>
-
-            <button class="menu-toggle" id="menu-toggle">
-                <i class="fas fa-bars"></i>
-            </button>
-
+            <button class="menu-toggle" id="menu-toggle"><i class="fas fa-bars"></i></button>
             <nav class="nav-menu" id="nav-menu">
                 <ul>
                     <li><a href="#home">Início</a></li>
@@ -38,118 +35,117 @@
         </div>
     </header>
 
-    <main>
-        <section id="home" class="hero">
-            <div class="container">
-                <div class="hero-content">
-                    <h1>Sua Solução em Tecnologia: Suporte e Consultoria em Informática</h1>
-                    <p>Oferecemos serviços completos de manutenção, reparo e otimização para computadores e redes, garantindo o máximo desempenho e segurança.</p>
-                    <a href="https://wa.me/5564992867359" class="btn" target="_blank">Fale com um Especialista Agora!</a>
+    <!-- HERO -->
+    <section id="home" class="hero">
+        <div class="container">
+            <div class="hero-content">
+                <h1>Soluções em Informática para Você e Sua Empresa</h1>
+                <p>Manutenção de computadores, redes, segurança digital e desenvolvimento de sites com atendimento ágil e personalizado.</p>
+                <a href="https://wa.me/5564999999999" class="btn" target="_blank">Fale Conosco no WhatsApp</a>
+            </div>
+        </div>
+    </section>
+
+    <!-- SOBRE -->
+    <section id="sobre" class="about">
+        <div class="container about-flex">
+            <div class="about-image">
+                <img src="informatica.jpg" alt="Profissional de informática trabalhando">
+            </div>
+            <div class="about-content">
+                <h2>Sobre Nós</h2>
+                <p>Somos especialistas em **informática e tecnologia**, oferecendo suporte para residências e empresas. Trabalhamos com manutenção de computadores, instalação de redes, soluções de backup e criação de sites modernos e otimizados.</p>
+                <p>Nosso compromisso é entregar agilidade, confiança e inovação, garantindo que você tenha sempre as melhores soluções digitais para o seu dia a dia.</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- SERVIÇOS -->
+    <section id="servicos" class="services">
+        <div class="container">
+            <h2 class="section-title">Nossos Serviços</h2>
+            <div class="service-cards">
+                <div class="card">
+                    <i class="fas fa-laptop-medical icon"></i>
+                    <h4>Manutenção de Computadores</h4>
+                    <p>Formatação, upgrades, remoção de vírus e otimização de desempenho.</p>
+                </div>
+                <div class="card">
+                    <i class="fas fa-network-wired icon"></i>
+                    <h4>Redes e Conectividade</h4>
+                    <p>Instalação e configuração de redes cabeadas e Wi-Fi seguras e rápidas.</p>
+                </div>
+                <div class="card">
+                    <i class="fas fa-globe icon"></i>
+                    <h4>Criação de Sites</h4>
+                    <p>Desenvolvimento de sites modernos, responsivos e otimizados para SEO.</p>
+                </div>
+                <div class="card">
+                    <i class="fas fa-cloud icon"></i>
+                    <h4>Backup e Segurança</h4>
+                    <p>Proteção de dados com soluções em nuvem e recuperação de arquivos.</p>
+                </div>
+                <div class="card">
+                    <i class="fas fa-headset icon"></i>
+                    <h4>Suporte Técnico</h4>
+                    <p>Atendimento remoto e presencial para resolver problemas de TI com rapidez.</p>
                 </div>
             </div>
-        </section>
+        </div>
+    </section>
 
-        <section id="sobre" class="about">
-            <div class="container about-flex">
-                <div class="about-image">
-                    <img src="suporte-ti.png" alt="Técnico de informática prestando suporte">
+    <!-- DIFERENCIAIS -->
+    <section id="diferenciais" class="why-choose-us">
+        <div class="container">
+            <h2 class="section-title">Por que escolher nossos serviços?</h2>
+            <div class="benefits-cards">
+                <div class="card">
+                    <i class="fas fa-clock icon"></i>
+                    <h4>Atendimento Rápido</h4>
+                    <p>Resolvemos problemas de forma ágil, minimizando o tempo de inatividade.</p>
                 </div>
-                <div class="about-content">
-                    <h2>Sobre Nossa Empresa</h2>
-                    <p>A **[Nome da Sua Empresa]** nasceu da paixão por tecnologia e do compromisso em oferecer soluções de informática de alta qualidade. Nossa missão é simplificar a sua vida digital, seja resolvendo um problema técnico complexo ou otimizando a performance do seu equipamento.</p>
-                    <p>Com anos de experiência, nossa equipe é especializada em atender tanto usuários domésticos quanto pequenas e médias empresas, sempre com agilidade, transparência e um atendimento focado na sua necessidade. Deixe a tecnologia conosco e foque no que realmente importa.</p>
+                <div class="card">
+                    <i class="fas fa-shield-alt icon"></i>
+                    <h4>Segurança Garantida</h4>
+                    <p>Utilizamos as melhores práticas para proteger seus dados e equipamentos.</p>
                 </div>
-            </div>
-        </section>
-
-        <section id="servicos" class="services">
-            <div class="container">
-                <h2 class="section-title">Nossos Serviços de Informática</h2>
-                <div class="service-cards">
-                    <div class="card">
-                        <i class="fas fa-desktop icon"></i>
-                        <h4>Manutenção e Reparo</h4>
-                        <p>Diagnóstico e conserto de problemas de hardware e software, como lentidão, superaquecimento e falhas de inicialização.</p>
-                    </div>
-                    <div class="card">
-                        <i class="fas fa-virus-slash icon"></i>
-                        <h4>Remoção de Vírus e Malwares</h4>
-                        <p>Limpeza completa do sistema, remoção de vírus, trojans, ransomwares e outras ameaças que comprometem sua segurança.</p>
-                    </div>
-                    <div class="card">
-                        <i class="fas fa-hdd icon"></i>
-                        <h4>Backup e Recuperação de Dados</h4>
-                        <p>Serviços de backup e estratégias de segurança para proteger seus arquivos importantes, além da recuperação de dados perdidos.</p>
-                    </div>
-                    <div class="card">
-                        <i class="fas fa-network-wired icon"></i>
-                        <h4>Configuração de Redes</h4>
-                        <p>Instalação e configuração de redes Wi-Fi e cabeadas para empresas e residências, garantindo conectividade e segurança.</p>
-                    </div>
-                    <div class="card">
-                        <i class="fas fa-cogs icon"></i>
-                        <h4>Otimização e Formatação</h4>
-                        <p>Formatação de computadores e notebooks, instalação de sistemas operacionais e otimização para máxima performance.</p>
-                    </div>
-                    <div class="card">
-                        <i class="fas fa-cloud icon"></i>
-                        <h4>Serviços na Nuvem e Consultoria</h4>
-                        <p>Implementação de soluções em nuvem para armazenamento e colaboração, além de consultoria técnica personalizada.</p>
-                    </div>
+                <div class="card">
+                    <i class="fas fa-user-check icon"></i>
+                    <h4>Suporte Personalizado</h4>
+                    <p>Cada cliente é único. Oferecemos soluções sob medida para cada necessidade.</p>
                 </div>
             </div>
-        </section>
+        </div>
+    </section>
 
-        <section id="diferenciais" class="why-choose-us">
-            <div class="container">
-                <h2 class="section-title">Por Que Escolher Nossos Serviços?</h2>
-                <div class="benefits-cards">
-                    <div class="card">
-                        <i class="fas fa-user-shield icon"></i>
-                        <h4>Confiança e Segurança</h4>
-                        <p>Trabalhamos com total sigilo e profissionalismo, garantindo a proteção de seus dados e a integridade de seus equipamentos.</p>
-                    </div>
-                    <div class="card">
-                        <i class="fas fa-tachometer-alt icon"></i>
-                        <h4>Agilidade no Atendimento</h4>
-                        <p>Entendemos a sua urgência e oferecemos um suporte rápido e eficiente para que você não perca tempo.</p>
-                    </div>
-                    <div class="card">
-                        <i class="fas fa-handshake icon"></i>
-                        <h4>Preços Justos e Transparentes</h4>
-                        <p>Nossos orçamentos são detalhados e sem surpresas. Você saberá exatamente o que está pagando, com preços competitivos.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section id="contato" class="contact">
-            <div class="container">
-                <h2 class="section-title">Pronto para Resolver Seu Problema?</h2>
-                <div class="contact-content">
-                    <div class="contact-info">
-                        <p>Nossa equipe está à disposição para ajudar. Entre em contato e agende seu suporte técnico.</p>
-                        <p><i class="fas fa-map-marker-alt"></i> Rua da Inovação, 101 - Bairro Tecnológico, Caldas Novas - GO</p>
-                        <p><i class="fas fa-phone-alt"></i> (64) 99286-7359</p>
-                        <p><i class="fas fa-envelope"></i> contato@suporteinformaticacn.com.br</p>
-                        <div class="social-links">
-                            <a href="#"><i class="fab fa-facebook-f"></i></a>
-                            <a href="#"><i class="fab fa-instagram"></i></a>
-                            <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                        </div>
+    <!-- CONTATO -->
+    <section id="contato" class="contact">
+        <div class="container">
+            <h2 class="section-title">Entre em Contato</h2>
+            <div class="contact-content">
+                <div class="contact-info">
+                    <p>Precisa de suporte em informática? Entre em contato agora mesmo!</p>
+                    <p><i class="fas fa-map-marker-alt"></i> Rua Central, 123 - Caldas Novas - GO</p>
+                    <p><i class="fas fa-phone-alt"></i> (64) 99999-9999</p>
+                    <p><i class="fas fa-envelope"></i> contato@informatica.com.br</p>
+                    <div class="social-links">
+                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
             </div>
-        </section>
-    </main>
+        </div>
+    </section>
 
+    <!-- FOOTER -->
     <footer class="footer">
         <div class="container footer-content">
             <div class="footer-info">
-                <h4>[Nome da Sua Empresa]</h4>
-                <p><i class="fas fa-map-marker-alt"></i> Rua da Inovação, 101 - Bairro Tecnológico, Caldas Novas - GO</p>
-                <p><i class="fas fa-phone-alt"></i> (64) 99286-7359</p>
-                <p><i class="fas fa-envelope"></i> contato@suporteinformaticacn.com.br</p>
+                <h4>Serviços de Informática</h4>
+                <p><i class="fas fa-map-marker-alt"></i> Rua Central, 123 - Caldas Novas - GO</p>
+                <p><i class="fas fa-phone-alt"></i> (64) 99999-9999</p>
+                <p><i class="fas fa-envelope"></i> contato@informatica.com.br</p>
             </div>
             <div class="footer-links">
                 <h4>Links Úteis</h4>
@@ -171,26 +167,19 @@
             </div>
         </div>
         <div class="container footer-bottom">
-            <p>&copy; 2025 [Nome da Sua Empresa]. Todos os direitos reservados.</p>
+            <p>&copy; 2025 Serviços de Informática. Todos os direitos reservados.</p>
         </div>
     </footer>
 
-    <a href="https://wa.me/5564992867359" class="whatsapp-btn" target="_blank">
-        <i class="fab fa-whatsapp"></i>
-    </a>
+    <!-- BOTÃO WHATSAPP -->
+    <a href="https://wa.me/5564999999999" class="whatsapp-btn" target="_blank"><i class="fab fa-whatsapp"></i></a>
 
     <script>
         const menuToggle = document.getElementById('menu-toggle');
         const navMenu = document.getElementById('nav-menu');
-
-        menuToggle.addEventListener('click', () => {
-            navMenu.classList.toggle('active');
-        });
-
+        menuToggle.addEventListener('click', () => navMenu.classList.toggle('active'));
         document.querySelectorAll('.nav-menu a').forEach(item => {
-            item.addEventListener('click', () => {
-                navMenu.classList.remove('active');
-            });
+            item.addEventListener('click', () => navMenu.classList.remove('active'));
         });
     </script>
 </body>
